--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "chalk": "^4.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
@@ -19,6 +18,7 @@
     "http-errors": "~1.6.3",
     "inquirer": "^7.3.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.24",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
